# Gambler0.1

./: CMakeLists.txt  imgui.ini
res/shaders/: basic.shader
src/: Camera.cpp  Camera.h  Collider.cpp  Collider.h  GLErrorCheck.cpp  GLMacros.cpp  IndexBuffer.cpp  IndexBuffer.h  KeyListener.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Tile.cpp  Tile.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  World.cpp  World.h  Zone.cpp  Zone.h  main.cpp
src/game/: Camera.cpp  Camera.h  Collider.cpp  Player.cpp  Player.h  Tile.cpp  World.cpp  Zone.cpp
src/game/ecs/: Entity.h
src/game/ecs/Componenets/: CMP_Transform.cpp  CMP_Transform.h  Component.h
src/renderer/: BatchRenderer.cpp  BatchRenderer.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/tests/: Test.cpp  Test.h  TestBatchedRendering.cpp  TestBatchedRendering.h  TestClearColor.cpp  TestClearColor.h  TestPlayer.cpp  TestPlayer.h  TestRenderWorld.cpp  TestRenderWorld.h  TestTexture2D.cpp  TestTexture2D.h
